--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.10",
     "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
